--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,8 @@ file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.hpp *.h *.cpp *.c)
 
 add_executable(${BINARY}_run ${SOURCES})
 
+set_property(TARGET ${BINARY}_run PROPERTY CXX_STANDARD 17)
+
 add_library(${BINARY}_lib STATIC ${SOURCES})
 
 include_directories(${OPENGL_INCLUDE_DIRS})
