--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,11 +3,17 @@ set(BINARY ${CMAKE_PROJECT_NAME})
 find_package(OpenGL REQUIRED)
 find_package(glfw3 REQUIRED)
 
-file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.hpp *.h *.cpp *.c)
+file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true  *.cpp *.c)
+file(GLOB_RECURSE HEADERS *.hpp *.h)
 
-add_executable(${BINARY}_run ${SOURCES})
+add_executable(${BINARY}_run ${SOURCES} )
 
-add_library(${BINARY}_lib STATIC ${SOURCES})
+add_library(${BINARY}_lib SHARED ${SOURCES} ${HEADERS})
+
+target_include_directories(${BINARY}_lib PUBLIC "headers" "interfaces")
+
+add_subdirectory(interfaces)
+add_subdirectory(headers)
 
 include_directories(${OPENGL_INCLUDE_DIRS})
 include_directories(${glfw3_INCLUE_DIRS})
@@ -15,3 +21,4 @@ include_directories(${glfw3_INCLUE_DIRS})
 target_link_libraries(${BINARY}_lib OpenGL::GL)
 target_link_libraries(${BINARY}_lib glfw)
 target_link_libraries(${BINARY}_run ${BINARY}_lib)
+
