--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,6 @@
 set(BINARY ${CMAKE_PROJECT_NAME}_test)
 
-file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false *.hpp *.h *.cpp)
-
-set(SOURCES ${TEST_SOURCES})
+file(GLOB TEST_SOURCES  *.cpp)
 
 add_executable(${BINARY} ${TEST_SOURCES})
 
