Basic code structurization II

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,12 +8,15 @@ file(GLOB_RECURSE HEADERS *.hpp *.h)
 
 add_executable(${BINARY}_run ${SOURCES})
 
+set_property(TARGET ${BINARY}_run PROPERTY CXX_STANDARD 17)
+
 add_library(${BINARY}_lib SHARED ${SOURCES} ${HEADERS})
 
 target_include_directories(${BINARY}_lib PUBLIC "headers" "interfaces")
 
 add_subdirectory(interfaces)
 add_subdirectory(headers)
+add_subdirectory(classes)
 
 include_directories(${OPENGL_INCLUDE_DIRS})
 include_directories(${glfw3_INCLUE_DIRS})
